--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -1,33 +1,34 @@
+#!/usr/bin/env sh
+
+# root privileges
 yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 sudo yabai --load-sa
 
-# tiling
-yabai -m config layout bsp
 # new windows to the right
-yabai -m config window_placement second_child
-# gaps
+#yabai -m config window_placement second_child
+
+# appearance
 yabai -m config top_padding 10
 yabai -m config bottom_padding 10
 yabai -m config left_padding 10
 yabai -m config right_padding 10
-
 yabai -m config window_gap 10
-
-yabai -m config focus_follows_mouse autoraise
-
-# modifiers -> fn key acts as mouse modifier
-
-yabai -m config window_shadow float
-
-# transparency
+yabai -m config window_shadow float # shadows only on floating files
+#yabai -m config external_bar all:32:0 # tell yabai to avoid sketchybar
 yabai -m config window_opacity on
 yabai -m config active_window_opacity 0.97
 yabai -m config normal_window_opacity 0.97
 
+# functionality
+yabai -m config layout bsp
+yabai -m config focus_follows_mouse autoraise
+yabai -m config auto_balance off
+yabai -m config split_ratio 0.5
+
+# floating windows
 yabai -m rule --add app="^Calculator$" manage=off
-yabai -m rule --add app="^Numi$" manage=off
 yabai -m rule --add app="^Finder$" manage=off
+yabai -m rule --add app-"^PsychoPy$" manage=off
 
-yabai -m config external_bar all:32:0
-
-borders active_color=0xff3c4841 inactive_color=0xff384b55 width=5.0 style=round hidpi=on &
+# bootstrap jankyborders
+#borders active_color=0xff3c4841 inactive_color=0xff384b55 width=5.0 style=round hidpi=on &
