--- a/.aerospace.toml
+++ b/.aerospace.toml
@@ -243,3 +243,7 @@ run = "move-node-to-workspace T"
 if.app-id = 'com.hnc.Discord'
 run = "move-node-to-workspace D"
 
+[[on-window-detected]]
+if.app-id = 'org.alacritty'
+run = "layout floating"
+
