--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,6 +10,9 @@ window_padding_width 5
 macos_show_window_title_in none
 macos_titlebar_color #161616
 macos_menubar_title_max_length 0
+remember_window_size  no
+initial_window_width  900
+initial_window_height 600
 
 # BEGIN_KITTY_THEME
 # Carbonfox
